# cpp_projects

./: README.md
asm_long_arithmetic/: mul.asm  sub.asm
bigint/: big_integer.cpp  big_integer.h  tests.cpp
bimap/: CMakeLists.txt
bimap/src/: bimap.h  set.h  set_iterator.h  utils.h
function/src/: function.h
function/test/: tests.cpp
huffman/: CMakeLists.txt  huffman-tool.cpp
huffman/huffman_lib/: CMakeLists.txt  huffman.cpp  huffman.h
huffman/huffman_lib/binary_io/: binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h
huffman/huffman_lib/huffman_convert_tree/: convert_tree.cpp  convert_tree.h
huffman/huffman_lib/utils/: constants.h
huffman/unit-tests/: CMakeLists.txt  tests.cpp
huffman/unit-tests/datasets/: f_d_l_b_t  winter_night_pasternak.txt
intrusive-list/: CMakeLists.txt
intrusive-list/src/: intrusive-list.cpp  intrusive-list.h
optional/src/: optional.h
shared-ptr/src/: shared-ptr.h
shared-ptr/test/: test-classes.h  weak-ptr-test.cpp
signal/src/: signals.h
signal/test/: signals-test.cpp
socow-vector/src/: socow-vector.h
tuple-exam/src/: tuple.h
tuple-exam/test/: tuple-test.cpp
variant/src/: utils.h  variant.h  variant_storage.h  visit_tools.h
